[package]
name = "p4ck375"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/p4ck375"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/p4ck375"
documentation = "https://docs.rs/p4ck375"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[features]
default = ["thiserror"]

[dependencies]
num_enum = "0.5"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.ed25519]
package = "ed25519-dalek"
version = "1.0"

[dependencies.format]
package = "f0rm47"
git = "https://git.r3vd5u3d.network/~r3v2d0g/f0rm47"
branch = "main"
features = ["chrono", "ed25519", "sparse"]

[dependencies.sparse]
package = "sp4r53"
version = "0.1"

[dependencies.thiserror]
version = "1.0"
optional = true

[dev-dependencies]
bincode = "1.3"

[dev-dependencies.p0w]
version = "0.2"
features = ["serde"]
