[package]
name = "p4ck375"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/p4ck375"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/p4ck375"
documentation = "https://docs.rs/p4ck375"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[dependencies]
ed25519 = { package = "ed25519-dalek", version = "1.0" }
format = { package = "f0rm47", features = ["ed25519"], git = "https://git.r3vd5u3d.network/~r3v2d0g/f0rm47", branch = "main" }
